Closed Bug 1209639 Opened 9 years ago Closed 9 years ago

nsNntpIncomingServer.cpp(1660): warning C4146: unary minus operator applied to unsigned type, result still unsigned

Categories

(MailNews Core :: Networking: NNTP, defect)

defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 44.0

People

(Reporter: ssitter, Assigned: ssitter)

Details

Attachments

(1 file)

I want to see less warnings in my build output
mailnews/news/src/nsNntpIncomingServer.cpp(1660): warning C4146: unary minus operator applied to unsigned type, result still unsigned
Attachment #8667414 - Flags: review?(rkent)
Attachment #8667414 - Flags: review?(rkent) → review+
Keywords: checkin-needed
https://hg.mozilla.org/comm-central/rev/08aaf7fd5f8409eaab776a4343b8259026b61d31
Bug 1209639 - Fix warning C4146: unary minus operator applied to unsigned type, result still unsigned. r=rkent a=aleth,neil SM CLOSED TREE
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 44.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: