Bug 1209639 - Fix warning C4146: unary minus operator applied to unsigned type, result still unsigned. r=rkent a=aleth,neil SM CLOSED TREE

--HG--
extra : amend_source : e7b83a8c2a105df9022ede232139d1a9583d0e58